--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 	<button id="start">Start BlackJack</button>
+	<div id="winpoint"></div>
 	<div class="card">
 		<div id="cards_d"></div>
 		<div id="cards_p"></div>
