--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
+
+	<link rel="stylesheet" href="css/ru-reto.css">
+	<!-- jQueryのCDNを読み込む -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 	<button id="start">Start BlackJack</button>
@@ -13,6 +17,22 @@
 		<button id="hit" style="visibility: hidden;">hit</button>
 		<button id="stand" style="visibility: hidden;">stand</button>
 	</div>
+
+	<ul id="roulette">
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		
+	</ul>
+
 </body>
+<script src="js/ru-reto.js"></script>
 <script src="app.js"></script>
 </html>
