--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<button id="start">Start BlackJack</button>
+	<div id="btitle">
+		<h1>rndBlackJack</h1>
+		<button id="start">Start BlackJack</button>
+	</div>
 	<div id="winpoint"></div>
 	<div class="card">
 		<div id="cards_d"></div>
