--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="btitle">
-		<h1>rndBlackJack</h1>
+		<h1>Roulette BlackJack</h1>
 		<button id="start">Start BlackJack</button>
 	</div>
 	<div id="winpoint"></div>
@@ -17,6 +17,7 @@
 		<button id="hit" style="visibility: hidden;">hit</button>
 		<button id="stand" style="visibility: hidden;">stand</button>
 	</div>
+	<div id="tryagain"></div>
 </body>
 <script src="app.js"></script>
 </html>
