--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="btitle">
 		<h1>Roulette BlackJack</h1>
-		<button id="start">Start BlackJack</button>
+		<button id="start" onclick="startGame()">Start BlackJack</button>
 	</div>
 	<div id="winpoint"></div>
 	<div class="card">
@@ -17,7 +17,9 @@
 		<button id="hit" style="visibility: hidden;">hit</button>
 		<button id="stand" style="visibility: hidden;">stand</button>
 	</div>
-	<div id="tryagain"></div>
+	<div id="tryagain">
+		<button id="restart" onclick="startGame()" style="visibility: hidden">try again</button>
+	</div>
 </body>
 <script src="app.js"></script>
 </html>
