nagase second commit

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 	<div id="winpoint"></div>
 	<div class="card">
-		<div id="cards_d"></div>
-		<div id="cards_p"></div>
+		<div id="cards_d"></div><br>
+		<div id="cards_p"></div><br>
 	</div>
 	<div id="hitstand">
 		<button id="hit" style="visibility: hidden;">hit</button>
