roulette edited commit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<button id="stand" style="visibility: hidden;">stand</button>
 	</div>
 	<div id="tryagain">
-		<button id="restart" onclick="startRoulette()" style="visibility: hidden;">try again</button>
+		<button id="restart" style="visibility: hidden;">try again</button>
 	</div>
 </body>
 <script src="app.js"></script>
